pratique/2021-ps-f3-minhoca.out-comp.txt
2021-ps-f3-minhoca.cpp: In function ‘int main()’:
2021-ps-f3-minhoca.cpp:32:11: error: ‘class std::unordered_map<int, int>’ has no member named ‘resize’; did you mean ‘size’?
   32 |     depth.resize(N + 1, 0);
      |           ^~~~~~
      |           size
